# neobase

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  README.rst  conftest.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  test_neobase.py  tox.ini  update_data.sh
.github/workflows/: python-package.yml
doc/: Makefile  conf.py  index.rst  make.bat
neobase/: __init__.py  __main__.py  neobase.py  update_data.sh
src/neobase/: __init__.py  __main__.py  neobase.py  version.py
tests/: conftest.py  test_neobase.py
