[build-system]
requires = ["setuptools>=71", "setuptools-scm[simple]>=8.1"]
build-backend = "setuptools.build_meta"

[project]
name = "NeoBase"
dynamic = ["version"]
description = "Python library to manipulate OpenTravelData"
readme = "README.rst"
authors = [
  {name = "Alex Prengère", email = "alex.prengere@gmail.com"},
]
requires-python = ">=3.9"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.scripts]
NeoBase = "neobase.__main__:main"

[project.urls]
Homepage = "https://github.com/alexprengere/neobase"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["neobase*",]

[dependency-groups]
test = [
    "pytz>=2024",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-benchmark>=5.1",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "--strict-markers",
  "--doctest-modules",
  "--doctest-glob='*.rst'",
  "--import-mode=importlib",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ELLIPSIS",
]
norecursedirs = [
    ".*",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "htmlcov",
    "doc",
]
filterwarnings = []

[tool.coverage.run]
branch = true
omit = [
    "*/__main__.py",
]

[tool.coverage.report]
fail_under = 90
skip_covered = true
exclude_lines = [
    '\# pragma: no cover\b',
    '^\s*raise AssertionError\b',
    '^\s*raise NotImplementedError\b',
    '^\s*return NotImplemented\b',
    '^\s*pytest.fail\b',
    "if __name__ == ['\"]__main__['\"]:$",
    '^def main\(\):$',
]

[tool.coverage.html]
show_contexts = true

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["doc"]

[tool.ruff.lint]
select = [
    "F",  # pyflakes
    "E",  # pycodestyle
    "W",  # pycodestyle
    "UP",  # pyupgrade
    "YTT",  # flake8-2020
    "ASYNC",  # flake8-async
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "T10",  # flake8-debugger
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "G",  # flake8-logging-format
    "PIE",  # flake8-pie
    "PYI",  # flake8-pyi
    "RSE",  # flake8-raise
    "TCH",  # flake8-type-checking
    "INT",  # flake8-gettext
    "PD",  # pandas-vet
    "PGH",  # pygrep-hooks
    "FLY",  # flynt
    "NPY",  # NumPy-specific rules
    "AIR",  # Airflow
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E402",  # module-import-not-at-top-of-file
    "RUF001",  # ambiguous-unicode-character-string
    "RUF005",  # splat-instead-of-concatenation
    "PYI024",  # collections-named-tuple
]
preview = true

[tool.black]
line-length = 88
target-version = ["py39"]
force_exclude = "doc/*"
