[metadata]
name = NeoBase
description = Python library to manipulate Open Travel Data
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/alexprengere/neobase
author = Alex Prengère
author_email = alex.prengere@gmail.com
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    importlib_resources<5.3;python_version<"3.7"
python_requires = >=3.6.1
setup_requires =
    setuptools_scm

[options.entry_points]
console_scripts =
    NeoBase = neobase.neobase:main
